--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
 
-    <a href="Index.html" class="title">
+    <a href="index.html" class="title">
     <img src="Assets/hsportfolio.png" alt="title">
     </a>
 
@@ -20,7 +20,7 @@
 <br>
 </header>
 <div class="navbar">
-    <a href="Index.html" class="navlink"> Home</a>
+    <a href="index.html" class="navlink"> Home</a>
     <a href="About.html" class="navlink">About Me</a>
     <a href="Graphic Design.html" class="navlink">Graphic Design</a>
     <a href="Acrylic Works.html" class="navlink">Acrylic</a>
