--- a/motiongraphics.html
+++ b/motiongraphics.html
@@ -9,11 +9,11 @@
 
   <body>
     <div class="title">
-      <a href="Index.html">
+      <a href="index.html">
       <img src="Assets/hsmg.png" alt="title" class="titleimage">
     </div>
     <div class="navbar">
-        <a href="Index.html" class="navlink"> Home</a>
+        <a href="index.html" class="navlink"> Home</a>
         <a href="About.html" class="navlink">About Me</a>
         <a href="Graphic Design.html" class="navlink">Graphic Design</a>
         <a href="Acrylic Works.html" class="navlink">Acrylic</a>
