--- a/Index.html
+++ b/Index.html
@@ -8,17 +8,11 @@
   </head>
 
 <body>
-  <header>
-
-    <a href="index.html" class="title">
-    <img src="Assets/hsportfolio.png" alt="title">
+  <div class="title">
+    <a href="index.html">
+      <img src="Assets/hsportfolio.png" alt="title" class="titleimage">
     </a>
-
-
-
-<!-- find a way to make this not so smooshed together? -->
-<br>
-</header>
+  </div>
 <div class="navbar">
     <a href="index.html" class="navlink"> Home</a>
     <a href="About.html" class="navlink">About Me</a>
