--- a/Acrylic Works.html
+++ b/Acrylic Works.html
@@ -25,16 +25,28 @@
       </div>
 
        <div class="Gallery">
-         <img src="CSS/Images/Acrylic.1_.png" alt="1" class="imagesize">
-         <img src="CSS/Images/Acrylic.2.png" alt="2" class="imagesize">
+         <a href="acrylic1.html" class="imageLink">
+           <img src="CSS/Images/Acrylic.1_.png" alt="1" class="imagesize">
+         </a>
+         <a href="acrylic3.html" class="imageLink">
+           <img src="CSS/Images/Acrylic.2.png" alt="2" class="imagesize">
+        </a>
          <br>
          <br>
-         <img src="CSS/Images/Acrylic.3.png" alt="3" class="imagesize">
+         <a href="acrylic4.html" class="imageLink">
+           <img src="CSS/Images/Acrylic.3.png" alt="3" class="imagesize">
+        </a>
+        <a href="acrylic5.html">
          <img src="CSS/Images/Acrylic.4.png" alt="4" class="imagesize">
+        </a>
          <br>
          <br>
-         <img src="CSS/Images/Acrylic.5.png" alt="5" class="imagesize">
+         <a href="acrylic6.html" class="imageLink">
+           <img src="CSS/Images/Acrylic.5.png" alt="5" class="imagesize">
+         </a>
+          <a href="acrylic2.html" class="imageLink">
          <img src="CSS/Images/a.png" alt="a" class="imagesize">
+            </a>
        </div>
 
   </body>
