--- a/Digital Art.html
+++ b/Digital Art.html
@@ -34,19 +34,31 @@
 </div>
   <div class="ar">
     <br>
-    <img src="CSS/Images/DA2019.png" alt="1" class="imagesize" >
+    <a href="da2019.html" class="imageLink">
+      <img src="CSS/Images/DA2019.png" alt="1" class="imagesize" >
+    </a>
     <br>
-    <img src="CSS/Images/DA20192.jpg" alt="2" class="imagesize">
+    <a href="da20192.html" class="imageLink">
+      <img src="CSS/Images/DA20192.jpg" alt="2" class="imagesize">
+    </a>
     <br>
   </div>
   <div class="navbar2">
     <a id="2020" class="navlink2"> 2020</a>
   </div>
   <div class="ar">
-    <img src="CSS/Images/DA20201.png" alt="1" class="imagesize">
-    <img src="CSS/Images/DA20202.jpg" alt="2" class="imagesize">
-    <img src="CSS/Images/DA20203.jpg" alt="3" class="imagesize">
-    <img src="CSS/Images/DA20204.png" alt="4" class="imagesize">
+    <a href="da20201.html" class="imageLink">
+      <img src="CSS/Images/DA20201.png" alt="1" class="imagesize">
+    </a>
+    <a href="da20202.html" class="imageLink">
+      <img src="CSS/Images/DA20202.jpg" alt="2" class="imagesize">
+    </a>
+    <a href="da20203.html" class="imageLink">
+      <img src="CSS/Images/DA20203.jpg" alt="3" class="imagesize">
+    </a>
+    <a href="da20204.html" class="imageLink">
+      <img src="CSS/Images/DA20204.png" alt="4" class="imagesize">
+    </a>
   </div>
     <div class="ar">
     </div>
@@ -58,12 +70,15 @@
   <div class="ar">
     <br>
     <br>
-      <img src="CSS/Images/DA20211.png" alt="1"class="imagesize">
+    <a href="da20211.html" class="imageLink">
+      <img src="CSS/Images/DA20211.png"  alt="1" class="imagesize">
+    </a>
     <br>
     <br>
-      <img src="CSS/Images/DA2021.png" alt="2"class="imagesize">
     <br>
-      <img src="CSS/Images/DA20213.png" alt="4" class="imagesize">
+    <a href="da20213.html" class="imageLink">
+      <img src="CSS/Images/DA20213.png" alt="3" class="imagesize">
+    </a>
     <br>
   </div>
   <div class="navbar2">
@@ -72,13 +87,19 @@
   <div class="ar">
     <br>
     <br>
-    <img src="CSS/Images/DA20221.png"  alt="1" class="imagesize">
+    <a href="da20221.html" class="imageLink">
+      <img src="CSS/Images/DA20221.png"  alt="1" class="imagesize">
+    </a>
     <br>
     <h2> *The artwork above and below this is fanart I created for characters from Star Wars, I do not own and am not affiliated with Star Wars!</h2>
     <br>
-    <img src="CSS/Images/DA20222.png"  alt="2" class="imagesize">
+    <a href="da20222.html" class="imageLink">
+      <img src="CSS/Images/DA20222.png"  alt="2" class="imagesize">
+    </a>
     <br>
-    <img src="CSS/Images/DA20223.png" alt="3" class="imagesize">
+    <a href="da20223.html" class="imageLink">
+      <img src="CSS/Images/DA20223.png" alt="3" class="imagesize">
+    </a>
     </div>
   </div>
 
