--- a/Graphic Design.html
+++ b/Graphic Design.html
@@ -27,11 +27,26 @@
 
     <table>
       <div class="Table">
-        <img src="CSS/Images/GD1.png" alt="1" class="imagesize"> <img src="CSS/Images/GD2.png" alt="2"class="imagesize" >
+        <a href="gd1.html" class="imageLink">
+          <img src="CSS/Images/GD1.png" alt="1" class="imagesize">
+        </a>
+        <a href="gd2.html" class="imageLink">
+          <img src="CSS/Images/GD2.png" alt="2"class="imagesize" >
+        </a>
       <br>
-        <img src="CSS/Images/GD3.png" alt="3"class="imagesize2"> <img src="CSS/Images/GD4.png" alt="4" class="imagesize3">
+      <a href="gd3.html" class="imageLink">
+        <img src="CSS/Images/GD3.png" alt="3"class="imagesize2">
+        </a>
+      <a href="gd4.html" class="imageLink">
+         <img src="CSS/Images/GD4.png" alt="4" class="imagesize3">
+      </a>
         <br>
-        <img src="CSS/Images/GD8.png" alt="4"class="imagesize"> <img src="CSS/Images/GD9.png" alt="5"class="imagesize">
+        <a href="gd8.html" class="imageLink">
+          <img src="CSS/Images/GD8.png" alt="4"class="imagesize">
+        </a>
+        <a href="gd9.html" class="imageLink">
+         <img src="CSS/Images/GD9.png" alt="5"class="imagesize">
+        </a>
     </div>
       <br>
 
