--- a/Index.html
+++ b/Index.html
@@ -35,29 +35,47 @@
 </div>
 
   <div class="works_1">
+  <a href="motiongraphics1.html" class="imageLink">
     <video width="450" height="260" controls loop autoplay muted>
-    <source src="Videos/Work.1.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-    <video preload="metadata" controls loop autoplay muted width="450px" height"260px">
-    <source src="Videos/Work.2.mp4" type="video/mp4">
-    </video>
-    <video preload="metadata" controls loop autoplay muted width="450px" height"260px">
-    <source src="Videos/Work.32..mp4" type="video/mp4">
+      <source src="Videos/Work.1.mp4" type="video/mp4">
       </video>
+   </a>
+   <a href="motiongraphics2.html" class="imageLink">
+     <video width="450" height="260" controls loop autoplay muted>
+       <source src="Videos/Work.2.mp4" type="video/mp4">
+       </video>
+    </a>
+    <a href="motiongraphics3.html" class="imageLink">
+      <video width="450" height="260" controls loop autoplay muted>
+        <source src="Videos/Work.32..mp4" type="video/mp4">
+        </video>
+     </a>
   </div>
   <br>
   <br>
   <div class="works_2">
+  <a href="acrylic1.html" class="imageLink">
     <img src="CSS/Images/Acrylic.1_.png" alt="1" width="450px" height"auto">
+  </a>
+  <a href="acrylic2.html" class="imageLink">
     <img src="CSS/Images/a.png" alt="2" width="450px" height"auto">
+  </a>
+  <a href="acrylic3.html" class="imageLink">
     <img src="CSS/Images/Acrylic.2.png" alt="3" width="450px" height "auto">
-
+  </a>
+    <br>
+    <br>
   </div>
-  <div class="works_3">
+  <div class="works_3" class="imageLink">
+    <a href="da20221.html" class="imageLink">
       <img src="CSS/Images/DA20221.png"  alt="1" class="imagesize">
+    </a>
+    <a href="da20222.html" class="imageLink">
       <img src="CSS/Images/DA20222.png"  alt="2" class="imagesize">
+    </a>
+      <a href="da20223.html" class="imageLink">
       <img src="CSS/Images/DA20223.png" alt="3" class="imagesize">
+      </a>
 
   </div>
 
