--- a/motiongraphics.html
+++ b/motiongraphics.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Mixed Media Work </title>
-    <link rel="stylesheet" type="text/css" href="CSS/Stylesheetmixedmediawork.CSS">
+    <link rel="stylesheet" type="text/css" href="CSS/Stylesheetmotiongraphics.CSS">
   </head>
 
   <body>
@@ -24,15 +24,20 @@
       </div>
 
 <div class="gallery">
-    <video width="450" height"260" controls loop autoplay muted>
-    <source src="Videos/Work.1.mp4" type="video/mp4">
-    </video>
-    <video preload="metadata" controls loop autoplay muted width="450px" height"260px">
-    <source src="Videos/Work.2.mp4" type="video/mp4">
-    </video>
-    <video preload="metadata" controls loop autoplay muted width="450px" height"260px" class="video">
-    <source src="Videos/Work.32..mp4" type="video/mp4">
+  <a href="motiongraphics1.html" class="imageLink">
+    <video width="450" height="260" controls loop autoplay muted>
+      <source src="Videos/Work.1.mp4" type="video/mp4">
       </video>
+   </a>
+   <a href="motiongraphics2.html" class="imageLink">
+     <video width="450" height="260" controls loop autoplay muted>
+       <source src="Videos/Work.2.mp4" type="video/mp4">
+       </video>
+    </a>
+    <a href="motiongraphics3.html" class="imageLink">
+      <video width="450" height="260" controls loop autoplay muted>
+        <source src="Videos/Work.32..mp4" type="video/mp4">
+        </video>
   </div>
 
   </body>
