--- a/da20224.html
+++ b/da20224.html
@@ -19,12 +19,12 @@
     </div>
 
     <div class="work_container">
-    <img src="CSS/Images/DA20223.png" alt="1" class="imagesize">
+    <img src="CSS/Images/DA20224.png" alt="1" class="imagesize">
     </div>
 
     <div class="text">
-      <p class="one"> Inki </p>
+      <p class="one"> Growth</p>
       <p class="two">By Hannah Stockschlaeder</p>
-      <p class="three"> Created in photoshop. A DND character I created. </p>
+      <p class="three"> Created in photoshop.</p>
 
     </div>
