--- a/da20222.html
+++ b/da20222.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Fish Logo </title>
+    <title> Display </title>
     <link rel="stylesheet" type="text/css" href="CSS/display.CSS">
   </head>
 
