--- a/About.html
+++ b/About.html
@@ -35,6 +35,12 @@
       <li>Production</li>
       <li>Interactive design</li>
     </ul>
+    <p>I am trained in these programs:</p>
+    <ul>
+      <li>Photoshop</li>
+      <li>After Effects</li>
+      <li>Premiere Pro</li>
+    </ul>
     <figure>
       <img src="CSS/Images/IMG_2704.JPG" alt="Me!" class="imageme">
     </figure>
