--- a/Digital Art.html
+++ b/Digital Art.html
@@ -100,6 +100,9 @@
     <a href="da20223.html" class="imageLink">
       <img src="CSS/Images/DA20223.png" alt="3" class="imagesize">
     </a>
+    <a href="da20224.html" class="imageLink">
+      <img src="CSS/Images/DA20224.png" alt="4" class="imagesize">
+    </a>
     </div>
   </div>
 
