Updates to graphic design

--- a/Graphic Design.html
+++ b/Graphic Design.html
@@ -25,6 +25,8 @@
       </div>
     <br>
 
+    <h1>Photoshop Work</h1>
+
     <table>
       <div class="Table">
         <a href="gd1.html" class="imageLink">
@@ -49,6 +51,15 @@
         </a>
     </div>
       <br>
+      
+    <h1>InDesign Work</h1>
+      <table>
+        <div class="Table">
+        <a href="ID1.html" class="imageLink">
+          <img src="CSS/Images/ID1.png" alt="1">
+        </a>
+        </div>
+      </table>
 
 
 
