--- a/Graphic Design.html
+++ b/Graphic Design.html
@@ -51,7 +51,7 @@
         </a>
     </div>
       <br>
-      
+
     <h1>InDesign Work</h1>
       <table>
         <div class="Table">
@@ -61,6 +61,16 @@
         </div>
       </table>
 
+      <br>
+
+      <h1>Illustrator work</h1>
+        <table>
+          <div class="Table">
+          <a href="AI1.html" class="imageLink">
+            <img src="CSS/Images/AI1.png" alt="1">
+          </a>
+          </div>
+        </table>
 
 
     </table>
