--- a/Graphic Design.html
+++ b/Graphic Design.html
@@ -69,6 +69,12 @@
           <a href="AI1.html" class="imageLink">
             <img src="CSS/Images/AI1.png" alt="1">
           </a>
+          <br>
+          <a href="motiongraphics4.html" class="imageLink">
+            <video width="650" height="460" controls loop autoplay muted>
+              <source src="Videos/Work4.mp4" type="video/mp4">
+              </video>
+          </a>
           </div>
         </table>
 
