--- a/Graphic Design.html
+++ b/Graphic Design.html
@@ -29,19 +29,12 @@
 
     <table>
       <div class="Table">
-        <a href="gd1.html" class="imageLink">
-          <img src="CSS/Images/GD1.png" alt="1" class="imagesize">
+        <a href="gd10.html" class="imageLink">
+          <img src="CSS/Images/gd10.png" alt="4"class="imagesize">
         </a>
-        <a href="gd2.html" class="imageLink">
-          <img src="CSS/Images/GD2.png" alt="2"class="imagesize" >
+        <a href="gd11.html" class="imageLink">
+          <img src="CSS/Images/gd11.png" alt="4"class="imagesize">
         </a>
-      <br>
-      <a href="gd3.html" class="imageLink">
-        <img src="CSS/Images/GD3.png" alt="3"class="imagesize2">
-        </a>
-      <a href="gd4.html" class="imageLink">
-         <img src="CSS/Images/GD4.png" alt="4" class="imagesize3">
-      </a>
         <br>
         <a href="gd8.html" class="imageLink">
           <img src="CSS/Images/GD8.png" alt="4"class="imagesize">
@@ -56,8 +49,15 @@
       <table>
         <div class="Table">
         <a href="ID1.html" class="imageLink">
-          <img src="CSS/Images/ID1.png" alt="1">
+          <img src="CSS/Images/ID1.png" alt="1" class="imagesize">
         </a>
+        <a href="ID2.html" class="imageLink">
+          <img src="CSS/Images/ID2.png" alt="1" class="imagesize">
+        </a>
+        <a href="ID3.html" class="imageLink">
+          <img src="CSS/Images/ID3.png" alt="1" class="imagesize">
+        </a>
+
         </div>
       </table>
 
@@ -66,15 +66,13 @@
       <h1>Illustrator work</h1>
         <table>
           <div class="Table">
-          <a href="AI1.html" class="imageLink">
-            <img src="CSS/Images/AI1.png" alt="1">
+          <a href="AI3.html" class="imageLink">
+            <img src="CSS/Images/AI3.png" alt="1"class="imagesize">
+          </a>
+          <a href="AI4.html" class="imageLink">
+            <img src="CSS/Images/AI4.png" alt="1"class="imagesize">
           </a>
           <br>
-          <a href="motiongraphics4.html" class="imageLink">
-            <video width="650" height="460" controls loop autoplay muted>
-              <source src="Videos/Work4.mp4" type="video/mp4">
-              </video>
-          </a>
           </div>
         </table>
 
