--- a/About.html
+++ b/About.html
@@ -40,6 +40,10 @@
       <li>Photoshop</li>
       <li>After Effects</li>
       <li>Premiere Pro</li>
+      <li>Indesign</li>
+      <li>Illustrator</li>
+      <li>Cinema4D</li>
+      <li>Procreate</li>
     </ul>
     <figure>
       <img src="CSS/Images/IMG_2704.JPG" alt="Me!" class="imageme">
